--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -26,16 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <Button
-                android:id="@+id/buttonSavePicture"
-                style="@style/Theme.OutlineButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="10dp"
-                android:text="@string/save"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/constraintLayout2" />
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout2"
@@ -154,6 +146,7 @@
             app:layout_constraintTop_toBottomOf="@+id/profileBackground">
 
             <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:orientation="vertical"
@@ -178,7 +171,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/enter_your_name"
                         android:inputType="textPersonName"
-                        tools:ignore="TextContrastCheck" />
+                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -197,7 +190,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/email"
                         android:inputType="textEmailAddress"
-                        tools:ignore="TextContrastCheck" />
+                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <LinearLayout
@@ -230,6 +223,7 @@
                         android:layout_marginStart="@dimen/normal_margin"
                         android:layout_weight="2"
                         android:orientation="horizontal"
+                        android:saveEnabled="false"
                         android:weightSum="2">
 
                         <RadioButton
@@ -237,14 +231,16 @@
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:text="@string/label_1" />
+                            android:text="@string/label_1"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                         <RadioButton
                             android:id="@+id/radio_button_2"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
-                            android:text="@string/label_2" />
+                            android:text="@string/label_2"
+                            tools:ignore="TouchTargetSizeCheck" />
 
                     </RadioGroup>
 
@@ -267,11 +263,10 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/enter_phone_number"
                         android:inputType="number"
-                        tools:ignore="TextContrastCheck" />
+                        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
@@ -280,48 +275,52 @@
                     android:layout_marginBottom="5dp"
                     app:endIconDrawable="@drawable/ic_edit_calendar"
                     app:endIconMode="custom"
-                    app:startIconDrawable="@drawable/ic_calendar_month">
+                    app:startIconDrawable="@drawable/ic_calendar_month"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/textInputLayout_DOB"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/dob"
+                        android:editable="false"
                         android:inputType="date"
-                        tools:ignore="TextContrastCheck" />
+                        tools:ignore="Deprecated,TextContrastCheck,TouchTargetSizeCheck" />
                 </com.google.android.material.textfield.TextInputLayout>
 
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2"
+                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+                >
+
+                <Button
+                    android:id="@+id/buttonCancel"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_margin="10dp"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
+                    android:layout_marginEnd="5dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/design_default_color_error"
+                    android:text="@string/cancel"
+                    android:textAllCaps="false"
+                    tools:ignore="ButtonStyle" />
 
-                    <Button
-                        android:id="@+id/buttonCancel"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="5dp"
-                        android:layout_weight="1"
-                        android:backgroundTint="@color/design_default_color_error"
-                        android:text="@string/cancel"
-                        android:textAllCaps="false"
-                        tools:ignore="ButtonStyle" />
-
-                    <Button
-                        android:id="@+id/buttonSave"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_weight="1"
-                        android:text="@string/save"
-                        android:textAllCaps="false"
-                        tools:ignore="ButtonStyle,TextContrastCheck" />
-
-                </LinearLayout>
+                <Button
+                    android:id="@+id/buttonSave"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
+                    android:text="@string/save"
+                    android:textAllCaps="false"
+                    tools:ignore="ButtonStyle,TextContrastCheck" />
 
             </LinearLayout>
 
