--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,8 @@
                 android:layout_marginTop="31dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                app:layout_constraintTop_toBottomOf="@+id/textViewTitle">
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:layout_constraintTop_toBottomOf="@+id/textViewTitle">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText_email"
