--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -105,7 +105,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         app:layout_constraintTop_toBottomOf="@+id/textView_PersonalServices"
-                        tools:listitem="@layout/services_card" />
+                        tools:listitem="@layout/card_services"
+                        />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -133,7 +134,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         app:layout_constraintTop_toBottomOf="@+id/textView_HomeServices"
-                        tools:listitem="@layout/services_card" />
+                        tools:listitem="@layout/card_services" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -160,7 +161,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
                         app:layout_constraintTop_toBottomOf="@+id/textView_HomeAppliances"
-                        tools:listitem="@layout/services_card" />
+                        tools:listitem="@layout/card_services" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
