--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
 
         <item name="textFillColor"> @color/text_color</item>
+        <item name="android:textColor">@color/text_color</item>
 
     </style>
 
